Fix category position on mobile

--- a/src/components/article-details/article-details.module.scss
+++ b/src/components/article-details/article-details.module.scss
@@ -72,4 +72,14 @@
     .mobile-meta-details {
         display: block;
     }
+
+    .mobile-author {
+        width: 70%;
+    }
+
+    .genre {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
 }
