--- a/src/templates/feature/feature.module.scss
+++ b/src/templates/feature/feature.module.scss
@@ -265,9 +265,9 @@
         }
     }
 
-    .banner {
-          background-position: left;
-    }
+    // .banner {
+    //       background-position: left;
+    // }
 }
 
 @media screen and (max-width: 650px) {
